deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-user
spec:
  selector:
    matchLabels:
      app: user
      ver: v1
  replicas: 2
  template:
    metadata:
      name: pod-user
      labels:
        app: user
        ver: v1
    spec:
      containers:
        - name: user
          image: rkdals213/user
          imagePullPolicy: Always
          ports:
            - name: port-user
              containerPort: 10001
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 1024Mi
