deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: user
